--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: python
-python:
-  - "2.6"
-  - "2.7"
-  - "pypy"
+env:
+  - TOX_ENV=py26-trunkdeps
+  - TOX_ENV=py27-trunkdeps
 install:
-  - "pip install -e ."
+  - pip install -e .
+  - pip install coveralls
 script:
-  - "trial querryl"
+  - tox -e $TOX_ENV
+after_success:
+  - coveralls
