--- a/tox.ini
+++ b/tox.ini
@@ -6,10 +6,7 @@ envlist = py27
 deps = Twisted
 commands =
     pip install -r {toxinidir}/requirements-testing.txt
-    coverage run {envdir}/bin/trial \
-        --temp-directory={envdir}/_trial {posargs:querryl}
-    coverage report --rcfile={toxinidir}/.coveragerc
-    coverage html --rcfile={toxinidir}/.coveragerc --directory {envdir}/_coverage
+    coverage run --source=querryl {envdir}/bin/trial --temp-directory={envdir}/_trial querryl
 
 [testenv:py26-trunkdeps]
 basepython = python2.6
