--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 [tox]
-#envlist = py26,py27,py26-trunkdeps,py27-trunkdeps
-envlist = py27
+envlist = py26,py27,py26-trunkdeps,py27-trunkdeps
 
 [testenv]
 deps = Twisted
