Add pypy to test env

--- a/tox.ini
+++ b/tox.ini
@@ -14,3 +14,6 @@ deps = git+git://github.com/twisted/twisted.git
 [testenv:py27-trunkdeps]
 basepython = python2.7
 deps = git+git://github.com/twisted/twisted.git
+
+[testenv:pypy]
+basepython = pypy
