Add pypy to test env

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26,py27,py26-trunkdeps,py27-trunkdeps
+envlist = py26,py27,py26-trunkdeps,py27-trunkdeps,pypy
 
 [testenv]
 deps = Twisted
