--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 env:
   - TOX_ENV=py26-trunkdeps
   - TOX_ENV=py27-trunkdeps
+  - TOX_ENV=pypy
 install:
   - pip install -e .
   - pip install tox
